Remove datepicker from layout flask

--- a/nginx/meli-nginx.conf
+++ b/nginx/meli-nginx.conf
@@ -1,5 +1,5 @@
 upstream flask_server {
-    server localhost:8000;
+    server localhost:5000;
 }
 
 upstream golang_server {
@@ -9,7 +9,7 @@ upstream golang_server {
 server {
     listen 80;
 
-    location /flask {
+    location /flask/ {
         proxy_pass http://flask_server;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -22,7 +22,7 @@ server {
         alias /home/app/web/fridas/static/;
     }
 
-    location /golang {
+    location /golang/ {
         proxy_pass http://golang_server;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
