--- a/serverless-service.yml
+++ b/serverless-service.yml
@@ -75,6 +75,7 @@ resources: # CloudFormation template syntax
             cd /home/meli-challenge/flask/app_flask && sudo bash env_bash.bash
             cd /home/meli-challenge/golang && sudo CGO_ENABLED=1 go build -v
             cd /home/meli-challenge/golang && sudo /home/meli-challenge/golang/meli-go &
+            cd /home/meli-challenge/flask && gunicorn --bind 0.0.0.0:5000 run:app --log-level=debug --workers=3 --daemon
             echo "Fin UserData script"
         Tags:
           - Key: stage
